<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/main_base" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingBottom="90dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            style="@style/TitleStyle"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/altaCliente" />

        <RadioGroup
            android:id="@+id/rg_member_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_member"
                style="@style/RadioStyle"
                android:text="@string/socio"
                android:button="@null" />

            <RadioButton
                android:id="@+id/rb_no_member"
                style="@style/RadioStyle"
                android:text="@string/noSocio"
                android:button="@null" />

        </RadioGroup>

        <EditText
            android:id="@+id/et_firstname"
            style="@style/EditTextStyle"
            android:autofillHints=""
            android:hint="@string/nombre"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_lastname"
            style="@style/EditTextStyle"
            android:autofillHints=""
            android:hint="@string/apellido"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_dni"
            style="@style/EditTextStyle"
            android:hint="@string/dni_label"
            android:autofillHints=""
            android:inputType="number" />

        <LinearLayout
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@color/colorSecondaryLight"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/aptoFisico"
                android:textColor="@color/colorFormText"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/switch_physical_fitness"
                style="@style/SwitchStyle"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_register"
            style="@style/ButtonStyle"
            android:text="@string/registrar" />

    </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        style="@style/BottomNavStyle"
        app:menu="@menu/bottom_nav_two_elements"
        app:itemIconTint="@color/colorButtonText"
        app:itemTextColor="@color/colorButtonText" />
</FrameLayout>
