<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/main_base" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="@color/colorTitle"
            android:textSize="18sp"
            android:gravity="center"/>

        <EditText
            style="@style/EditTextStyle"
            android:id="@+id/username"
            android:autofillHints=""
            android:hint="@string/username"
            android:inputType="text" />

        <EditText
            style="@style/EditTextStyle"
            android:id="@+id/password"
            android:autofillHints=""
            android:hint="@string/password"
            android:inputType="textPassword" />

    </LinearLayout>

</FrameLayout>