<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/main_base" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingBottom="90dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="top|center_horizontal"
        android:padding="24dp">

        <TextView
            style="@style/TitleStyle"
            android:layout_marginTop="55dp"
            android:layout_marginBottom="95dp"
            android:text="@string/emitirCarnet" />

        <TextView
            style="@style/LabelStyle"
            android:text="@string/dni_label" />

        <EditText
            android:id="@+id/DNI"
            style="@style/EditTextStyle"
            android:autofillHints=""
            android:hint="@string/DNIhint"
            android:inputType="text" />

        <Button
            android:id="@+id/btn_buscar"
            style="@style/ButtonStyle"
            android:text="@string/buscar" />
    </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        style="@style/BottomNavStyle"
        app:menu="@menu/bottom_nav_two_elements"
        app:itemIconTint="@color/colorButtonText"
        app:itemTextColor="@color/colorButtonText" />

</FrameLayout>